# kellblog_audio

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: backfill-distributed.yml  sync-podcast.yml
.wrangler/cache/: cf.json  wrangler-account.json
docs/: BACKFILL.md  DIRECTORY_SUBMIT.md  R2_CLOUDFLARE_SETUP.md  WHILE_BACKFILL.md
docs/superpowers/plans/: 2026-06-29-distributed-backfill-implementation.md
docs/superpowers/specs/: 2026-05-19-kellblog-audio-design.md  2026-06-29-distributed-backfill-design.md
output/: index.html
scripts/: generate_artwork.py  synth_watchdog.sh
src/kellblog_audio/: __init__.py  bakeoff.py  bakeoff_html.py  bakeoff_voices.py  catalog.py  cli.py  config.py  distributed_backfill.py  extract.py  footnotes.py  glossary.py  ingest.py  intro_outro.py  maintenance.py  podcast.py  publish.py  qa.py  review_html.py  styletts2_worker.py  synthesize.py  text_clean.py  tts.py
tests/: test_audio_qa.py  test_audio_reset.py  test_bakeoff_voices.py  test_cli_distributed.py  test_distributed_backfill.py  test_extract.py  test_footnotes.py  test_ingest_refresh.py  test_intro_outro.py  test_normalize.py  test_review_html.py  test_rss.py  test_synthesize_cache.py  test_synthesize_quality.py  test_tts_chunk.py  test_workflow_backfill.py
tests/fixtures/: short_post.html
